[package]
name = "reelay"
version = "0.1.0"
edition = "2021"
description = "A command-line RSS feed reader and manager"
license = "MIT"
authors = ["t0wt13m5 <t0wt13m5@gmail.com>"]
repository = "https://github.com/t0wt13m5/reelay"
homepage = "https://github.com/t0wt13m5/reelay"
keywords = ["rss", "feed", "cli", "reader"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dirs-next = "2.0.0"
rusqlite = { version = "0.37", features = ["bundled"] }
feed-rs = "1.4"
chrono = { version = "0.4", features = ["clock"] }